--- a/notebooks/notebook_2.1_recap_exercises.ipynb
+++ b/notebooks/notebook_2.1_recap_exercises.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "# Exercises\n",
-    "If you have the time, try these exercises. \n",
-    "======\n",
+    "\n",
+    "Run the code in the cells by clicking the cell and pressing CTRL + ENTER.\n",
     "\n",
     "## Exercise 1) Strings & Printing.\n",
     "\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "print()"
+    "print() # should print \"Jon Snow\""
    ]
   },
   {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,44 +74,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'new_name' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-39-6bea9a18fe0a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdoctorate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfirstname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlastname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-38-c52479a6264c>\u001b[0m in \u001b[0;36mdoctorate\u001b[1;34m(firstname, lastname)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;31m# Add your code here\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;31m#\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[1;32mreturn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnew_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'new_name' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(doctorate(firstname, lastname))"
+    "print(doctorate(firstname, lastname)) # should print \"Dr. Snow\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now let's do something a little bit harder..\n",
+    "### Now let's do something a little bit harder..\n",
     "We want to remake the doctorate function we wrote above. But this time it takes the full name as one input variable.\n",
     "First make a new variable that contains the full name. Again, don't forget the space. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "fullname = \"\" # Add code here"
+    "fullname = "
    ]
   },
   {
@@ -125,17 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "index = fullname.find(\"J\")\n",
     "print(index)"
@@ -145,13 +124,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Remember that python is uses 0-based indexing!\n",
+    "\n",
     "Now fill in the function below. It should take a full name (like \"Jon Snow\") and return the last name with \"Dr.\" before.<br>\n",
     "Hint: use the find function to find the space between the names and the colon operator to extract the last name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,18 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(smarter_doctorate(fullname))\n",
     "print(smarter_doctorate(\"\")) # try it with some other names!"
@@ -191,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,8 +179,8 @@
    "outputs": [],
    "source": [
     "# Test your function\n",
-    "print(circle_area(4))\n",
-    "print()"
+    "print(circle_area(4)) # should print 50.24 (or thereabout)\n",
+    "print() # test it with some other value!"
    ]
   },
   {
@@ -221,22 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def cylinder_volume(radius, height):\n",
     "    # Call your circle_area function\n",
     "    return\n",
-    "print()"
+    "print() # call your cylinder_volume function here with some radius and height"
    ]
   },
   {
@@ -251,28 +215,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-55-6df91e1fee3d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mheight\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"3\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0marea\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcircle_area\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mradius\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mvolume\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcylinder_volume\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mradius\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"The circle's area is \"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0marea\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\" and the cylinder's volume is \"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mvolume\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-53-2dc5831c2afa>\u001b[0m in \u001b[0;36mcylinder_volume\u001b[1;34m(radius, height)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcylinder_volume\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mradius\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mradius\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mheight\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "radius = 2\n",
     "height = \"3\"\n",
     "area = circle_area(radius)\n",
     "volume = cylinder_volume(radius, height)\n",
-    "print(\"The circle's area is \" + area + \" and the cylinder's volume is \" + volume)\n"
+    "print(\"The circle's area is \" + area + \" and the cylinder's volume is \" + volume)"
    ]
   },
   {
@@ -290,20 +241,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DNA1 has 17 nucleotides, DNA2 has 14 nucleotides. In total they contain 31 nucleotides\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dna1 = \"CTGACTGCAACGGGCAA\"\n",
-    "dna2 = \"CTGTGTGGATTAAA\""
+    "dna2 = \"CTGTGTGGATTAAA\"\n",
+    "# Add some code that prints the lengths here"
    ]
   },
   {
@@ -317,19 +261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Two is greater than one\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "if (2 > 1):\n",
+    "if (2 > 1): # (2 > 1) is the logic statement here\n",
     "    print(\"Two is greater than one\") # this line is run if the logic statement is true\n",
     "else:\n",
     "    print(\"Two is not greater than one\") # this line is run if the logic statement is false"
@@ -344,21 +280,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-67-1e32b1a64eaa>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-67-1e32b1a64eaa>\"\u001b[1;36m, line \u001b[1;32m6\u001b[0m\n\u001b[1;33m    long = longer_string(dna1, dna2)\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def longer_string():\n",
-    "    # complete the function\n",
+    "    # Add your code here\n",
     "    #\n",
     "    #\n",
     "    \n",
@@ -377,17 +304,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Drogon\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "empty = [] # creates an empty list\n",
     "dragons = [\"Drogon\", \"Rhaegal\"] # creates a list with two strings\n",
@@ -408,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +338,10 @@
     "# \n",
     "# \n",
     "# \n",
-    "# \n"
+    "# \n",
+    "\n",
+    "print(numbers) # should print [1, 2, 3]\n",
+    "print(letters) # should print ['a', 'b', 'c']"
    ]
   },
   {
@@ -433,26 +355,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(0, 10):\n",
     "    print(i)"
@@ -467,20 +372,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 3, 5, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "numbers = [1, 3, 5, 9]\n",
-    "\n",
     "def mul(nrs):\n",
     "    # Add for loop here\n",
     "    #\n",
@@ -505,23 +401,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "0\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def count_a(dna):\n",
     "    count = 0\n",
     "    # Add a for loop here\n",
+    "    #\n",
+    "    #\n",
     "    return count\n",
     "\n",
     "\n",
@@ -543,17 +431,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "city_populations = {\n",
-    "    \"Malmoe\" : 312012,\n",
+    "    \"Malmoe\" : 312012, # Here \"Malmoe\" is the key and it's value is 312012 \n",
     "    \"Gothenburg\" : 572779,\n",
     "    \"Lund\" : 91086,\n",
     "    \"Kiruna\" : 18148,\n",
     "    \"Visby\" : 24330\n",
-    "}"
+    "}\n",
+    "print(city_populations[\"Malmoe\"])"
    ]
   },
   {
@@ -567,21 +456,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Malmoe 312012\n",
-      "Gothenburg 572779\n",
-      "Lund 91086\n",
-      "Kiruna 18148\n",
-      "Visby 24330\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for key in city_populations:\n",
     "    print(key + \" \" + str(city_populations[key]))"
@@ -630,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,6 +536,13 @@
     "\n",
     "1, 2, Fizz, 4, Buzz, Fizz, 7, 8, Fizz, Buzz, 11, Fizz, 13, 14, Fizz Buzz, 16, 17, Fizz, 19, Buzz, Fizz, 22, 23, Fizz, Buzz, 26, Fizz, 28, 29, Fizz Buzz, 31, 32, Fizz, 34, Buzz, Fizz, ..."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
