Exercise numberoing + added exercise on files

--- a/notebooks/notebook_2_recap_exercises.ipynb
+++ b/notebooks/notebook_2_recap_exercises.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercises\n",
+    "# Exercise 2\n",
     "\n",
     "Run the code in the cells by clicking the cell and pressing CTRL + ENTER.\n",
     "\n",
-    "## Exercise 1) Strings & Printing.\n",
+    "## 2.1 Strings & Printing.\n",
     "\n",
     "First we want to recap printing out some text. As you saw earlier text is called __strings__.\n",
     "Let's save the strings **Jon** and **Snow** as two different variables so we can use them later."
@@ -156,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 2) Arithmetics\n",
+    "## 2.2 Arithmetics\n",
     "To practice arithmetics we will do some basic geometry functions.\n",
     "Make a function that calculates the surface area of a circle."
    ]
@@ -254,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 3) Logic statements\n",
+    "## 2.3 Logic statements\n",
     "\n",
     "An if statement will run some code depending on the logic statement inside.\n"
    ]
@@ -297,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 4) Lists\n",
+    "## 2.4 Lists\n",
     "\n",
     "A list is multiple variables in a sequence. In python lists are created with the [ ] operator."
    ]
@@ -348,7 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 5) For loops\n",
+    "## 2.5 For loops\n",
     "\n",
     "A for loop will run a block of code some amount of times."
    ]
@@ -422,7 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 6) Dictionaries\n",
+    "## 2.6 Dictionaries\n",
     "\n",
     "A dictionary can be used to map *keys* to *values*.\n",
     "\n",
