--- a/notebooks/notebook_3_classes_exercises.ipynb
+++ b/notebooks/notebook_3_classes_exercises.ipynb
@@ -4,25 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercises\n",
+    "# Exercise 3\n",
     "### In this exercise you will work with classes. We will start by creating a small class and then as we move along we will add more to it. \n",
     "\n",
     "In this exercise you will make a Person class. A code skeleton is given in the cell below. In each task you will add more code to your Person class in the first cell.  \n",
     "\n",
-    "## Exercise 1) Getting started\n",
+    "## 3.1 Getting started\n",
     "\n",
     "Run the code below"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neil Armstrong\n"
+     ]
+    }
+   ],
    "source": [
     "class Person:\n",
     "    def __init__(self, name):\n",
     "        self.name = name\n",
+    "    def __str__(self):\n",
+    "        return\n",
     "        \n",
     "astronaut1 = Person(\"Neil Armstrong\")\n",
     "print(astronaut1)"
@@ -72,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 2) More attributes and functions\n",
+    "## 3.2 More attributes and functions\n",
     "\n",
     "The Person class so far is not very useful. \n",
     "\n",
@@ -83,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +139,7 @@
    "source": [
     "To measure the GC-content, we must iterate over the DNA string.\n",
     "\n",
-    "Add a function <code>gc_content</code> that calculates the GC-content of the Person class.\n",
+    "Add a function <code>gc_content</code> that calculates the GC-content of the Person class. To do this you need to count all the G's and C's in the string, divide by the total length and then multiply with 100.\n",
     "\n",
     "Hint: Recall how to use for loops with strings from the previous exercise when you counted A's."
    ]
@@ -142,7 +152,7 @@
    "source": [
     "astronaut1 = Person(\"Neil\", \"Armstrong\")\n",
     "astronaut1.DNA = \"GCATCAGGCATCAATTATAGCGCCCTATATCATCGAA\"\n",
-    "print(astronaut1.gc_content()) # should print 0.43243243243243246 "
+    "print(astronaut1.gc_content()) # should print 43.243243243243246 "
    ]
   },
   {
@@ -195,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Exercise 3) Multiple objects of the same class\n",
+    "##  3.3 Multiple objects of the same class\n",
     "\n",
     "When we write <code>astronaut1 = Person(...)</code> it creates an **object** called astronaut1 of the Person **class**.\n",
     "\n",
