--- a/notebooks/notebook_4_files_exercises.ipynb
+++ b/notebooks/notebook_4_files_exercises.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercises\n",
+    "# Exercise 4\n",
     "\n",
     "In these exercises we will practice reading and writing to files.\n",
     "\n",
-    "## Exercise 1) Basic file input and output\n",
+    "## 4.1 Basic file input and output\n",
     "\n",
     "Recall that we can open and read a file with:"
    ]
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../data/dna.txt\", \"r\") as file:\n",
+    "with open(\"../data/exercises/dna.txt\", \"r\") as file:\n",
     "    for line in file:\n",
     "        print(line.rstrip())"
    ]
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../data/dna.txt\", \"r\") as file:\n",
+    "with open(\"../data/exercises/dna.txt\", \"r\") as file:\n",
     "    # Add your code here"
    ]
   },
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../data/dna.txt\", \"r\") as file:\n",
+    "with open(\"../data/exercises/dna.txt\", \"r\") as file:\n",
     "    # Add your code here"
    ]
   },
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../data/rna.txt\", \"w\") as file:\n",
+    "with open(\"../data/exercises/rna.txt\", \"w\") as file:\n",
     "    # Add you code here"
    ]
   },
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 2) More advanced file input and output\n",
+    "## 4.2 More advanced file input and output\n",
     "\n",
     "Handling long and complicated files is often tedious but inevitable in programming. The file <code>dna.txt</code> we used in the previous exercise is in a format known as the [FASTA format](https://en.wikipedia.org/wiki/FASTA_format).\n",
     "\n",
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../data/planets.csv\", \"r\") as file:\n",
+    "with open(\"../data/exercises/planets.csv\", \"r\") as file:\n",
     "    for line in file:\n",
     "        print(line.rstrip())"
    ]
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../data/planets.csv\", \"r\") as file:\n",
+    "with open(\"../data/exercises/planets.csv\", \"r\") as file:\n",
     "    # Add your code here"
    ]
   },
@@ -172,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../data/planets.csv\", \"r\") as file:\n",
+    "with open(\"../data/exercises/planets.csv\", \"r\") as file:\n",
     "    # Read the first line and save it to a list\n",
     "    #\n",
     "    planets = [] # creates an empty list\n",
@@ -191,9 +191,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### If you have the time\n",
+    "If you thought this was tricky you will be glad to hear that there are tools that handles stuff like this for us. The python module Pandas is great for this as we will get to try in Exercise 5.\n",
     "\n",
-    "Write a function that prints the name of the planet with the largest diameter, using the data from the previous task."
+    "## Bonus Exercises\n",
+    "\n",
+    "Now we will try to read in from one file and write to two different. Your task is to read in a FASTA file located in <code>../data/exercises/fasta.txt</code> and write to <code>high_gc.txt</code> and <code>low_gc.txt</code> depending on the gc content of the string. \n",
+    "\n",
+    "Run the code in the cell below to see what the input file looks like."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data/exercises/fasta.txt') as input_file:\n",
+    "    for line in input_file:\n",
+    "        print(line.rstrip())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The id's with their respective gc content score that has a gc content over 50% should be written to <code>high_gc.txt</code> and the others in <code>low_gc.txt</code>."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If you want to use your own gc_content function from Exercise 3 then feel free to. Otherwise we will provide one below.\n",
+    "def gc_content(dna):\n",
+    "    nucl_dict = {'A' : 0, 'C': 0, 'G': 0, 'T': 0}\n",
+    "    for symbol in dna:\n",
+    "        nucl_dict[symbol] += 1\n",
+    "    return (nucl_dict['G'] + nucl_dict['C']) / len(dna)\n",
+    "\n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that prints the name of the planet with the largest diameter, using the data from the <code>planets.csv</code> file."
    ]
   },
   {
