--- a/notebooks/notebook_5_pandas.ipynb
+++ b/notebooks/notebook_5_pandas.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![title](https://www.telegraph.co.uk/content/dam/news/2016/08/23/106598324PandawaveNEWS_trans_NvBQzQNjv4Bqeo_i_u9APj8RuoebjoAHt0k9u7HhRJvuo-ZLenGRumA.jpg?imwidth=400)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Pandas is one of the best things that happened to Python in recent times. It is due to Pandas that Python has become the language of choice for data scientists.\n",
     "#### Using Pandas we can handle tabular in Python with absolute ease.\n",
     "\n",
